--- a/portfolio_ideta/about.html
+++ b/portfolio_ideta/about.html
@@ -29,45 +29,49 @@
 <body>
     <header>
         <div class="header">
-            <nav class="pc_nav">
-                <li>
-                    <ul class="en"><a href="./index.html">TOP</a></ul>
-                    <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
-                    <ul class="en"><a href="./index.html#contact">CONTACT</a></ul>
-                </li>
-
-                <li>
-                    <ul class="en"><a href="./works_hp.html">HP</a></ul>
-                    <ul class="en"><a href="./works_lp.html">LP</a></ul>
-                    <ul class="en"><a href="./works_bn.html">BANNER</a></ul>
-                    <ul class="en">WORKS</ul>
-                </li>
-            </nav>
+            <div class="wrapper">
+                <nav class="pc_nav">
+                    <li>
+                        <ul class="en"><a href="./index.html">TOP</a></ul>
+                        <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
+                        <ul class="en"><a href="./index.html">CONTACT</a></ul>
+                    </li>
+                    <div class="line"></div>
+                    <li>
+                        <ul class="en"><a href="./works_hp.html">HP</a></ul>
+                        <ul class="en"><a href="./works_lp.html">LP</a></ul>
+                        <ul class="en"><a href="./works_bn.html">BANNER</a></ul>
+                        <ul class="en">WORKS</ul>
+                    </li>
+                </nav>
+            </div>
             <div class="sp_btn"><span></span></div>
             <div class="sp_menu">
-                <div class="sp_portfolioname">
-                    <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
-                </div>
-                <div class="content">
-                    <nav class="sp_nav">
-                        <li>
-                            <ul class="en"><a href="./index.html">TOP</a></ul>
-                            <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
-                            <ul class="en"><a href="./works_hp.html">HP<span>WORKS</span></a></ul>
-                            <ul class="en"><a href="./works_lp.html">LP<span>WORKS</span></a></ul>
-                            <ul class="en"><a href="./works_bn.html">BANNER<span>WORKS</span></a></ul>
-                            <ul class="en"><a href="./index.html#contact">CONTACT</a></ul>
-                        </li>
-                    </nav>
-                    <div class="triangle_top"></div>
-                    <div class="triangle_bottom"></div>
+                <div>
+                    <div class="menu_portfolioname">
+                        <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
+                    </div>
+                    <div class="content">
+                        <nav class="sp_nav">
+                            <li>
+                                <ul class="en"><a href="./index.html">TOP</a></ul>
+                                <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
+                                <ul class="en"><a href="./works_hp.html">HP<span>WORKS</span></a></ul>
+                                <ul class="en"><a href="./works_lp.html">LP<span>WORKS</span></a></ul>
+                                <ul class="en"><a href="./works_bn.html">BANNER<span>WORKS</span></a></ul>
+                                <ul class="en"><a href="./index.html">CONTACT</a></ul>
+                            </li>
+                        </nav>
+                        <div class="triangle_top"></div>
+                        <div class="triangle_bottom"></div>
 
+                    </div>
                 </div>
             </div>
 
         </div>
     </header>
-    <div class="portfolioname">
+    <div class="top_portfolioname">
         <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
     </div>
     <main data-scroll-container>
@@ -82,11 +86,20 @@
                             <div class="erase"></div>
                             <div class="ttl_line"></div>
                         </div>
-                        <div class="txt">
+                        <div class="pc_txt">
                             <p>大阪府出身、1991年生まれ。結婚を機に、25年過ごした大阪を離れて関東へ。<br>
                                 今は埼玉県にある昨年建てた一軒家で、夫と２人の息子の４人暮らし。<br><br>
                                 子どもの頃から絵を描くことや綺麗なものを見ることが好き。なんとなく過ごしてきましたが、今振り返ると「絵」や「イラスト」が常に側にある生活をしてきて、デザイナーを目指すのは必然のように感じます。<br><br>
                                 もう１つ好きなものが医療。大阪大学を卒業後、看護師として移植医療を行う外科病棟と小児集中治療室、小児クリニックや保育園看護師など、主に小児医療を中心に経験してきました。特殊な環境下に置かれた子どもの気持ちやその家族の想いを汲み取り、安心してもらえるよう配慮することを大切に。私の周りはいつも子どもやその家族の笑顔でいっぱいでした。これが私の天職だ、と仕事にやりがいも感じています。<br><br>
+                                そんな私に転機が訪れたのは、自分の結婚式でプロフィールブックとウェルカムボードを自作した時。こんなに楽しいことを仕事にできたら、もっと人生楽しくなると考えました。そして、その後出会ったのが「Webデザイナー」です。
+                            </p>
+                        </div>
+                        <div class="sp_txt">
+                            <p>大阪府出身、1991年生まれ。結婚を機に、25年過ごした大阪を離れて関東へ。<br>
+                                今は埼玉県にある昨年建てた一軒家で、夫と２人の息子の４人暮らし。<br><br>
+                                子どもの頃から絵を描くことや綺麗なものを見ることが好き。なんとなく過ごしてきましたが、今振り返ると「絵」や「イラスト」が常に側にある生活をしてきて、デザイナーを目指すのは必然のように感じます。<br><br>
+                            </p>
+                            <p> もう１つ好きなものが医療。大阪大学を卒業後、看護師として移植医療を行う外科病棟と小児集中治療室、小児クリニックや保育園看護師など、主に小児医療を中心に経験してきました。特殊な環境下に置かれた子どもの気持ちやその家族の想いを汲み取り、安心してもらえるよう配慮することを大切に。私の周りはいつも子どもやその家族の笑顔でいっぱいでした。これが私の天職だ、と仕事にやりがいも感じています。<br><br>
                                 そんな私に転機が訪れたのは、自分の結婚式でプロフィールブックとウェルカムボードを自作した時。こんなに楽しいことを仕事にできたら、もっと人生楽しくなると考えました。そして、その後出会ったのが「Webデザイナー」です。
                             </p>
                         </div>
@@ -99,7 +112,8 @@
                                 まるで花が開くように。<br>
                                 そんなデザイナーを目指しています。
                             </p>
-                            <p>人生の大切な部分で、人の想いに触れ、関わり、支え、一緒に歩んでいく。</p>
+                            <p class="pc_txt_last">人生の大切な部分で、人の想いに触れ、関わり、支え、一緒に歩んでいく。</p>
+                            <p class="sp_txt_last">人生の大切な部分で、<br>人の想いに触れ、<br>関わり、支え、<br>一緒に歩んでいく。</p>
                         </div>
                     </div>
 
@@ -124,45 +138,35 @@
 
                             <div class="content">
                                 <h3>保育園</h3>
-                                <!-- <div class="txt"> -->
                                 <p class="txt">絵を習い、動物園でフラミンゴの絵を描く<br>
                                     英会話を習う（ここから十年）</p>
-                                <!-- </div> -->
                                 <div class="line_diagonal"></div>
                             </div>
                             <div class="content">
                                 <h3>小学校</h3>
-                                <!-- <div class="line"> -->
                                 <p class="txt">「愛鳥週間」のコンテストで燕の絵を描き、入賞する<br>
                                     夏休みの工作を楽しみに過ごす</p>
-                                <!-- </div> -->
                                 <div class="line_diagonal"></div>
                             </div>
                             <div class="content">
                                 <h3>中学校</h3>
-                                <!-- <div class="line"> -->
                                 <p class="txt">アニメにハマる<br>
                                     夜中はパソコンで必死にキャラクターを描く<br>
                                     美術で学年一の成績を取る
                                 </p>
-                                <!-- </div> -->
                                 <div class="line_diagonal"></div>
                             </div>
                             <div class="content">
                                 <h3>高校</h3>
-                                <!-- <div class="line"> -->
                                 <p class="txt">受験勉強する<br>
                                     仲のいい子とクラスが離れてあまり記憶がない</p>
-                                <!-- </div> -->
                                 <div class="line_diagonal"></div>
                             </div>
                             <div class="content">
                                 <h3>大学</h3>
-                                <!-- <div class="line"> -->
                                 <p class="txt">飲食バイトを掛け持ち<br>
                                     軽音サークルとダンスサークルを掛け持ち<br>
                                     ただひたすら遊ぶ</p>
-                                <!-- </div> -->
                                 <div class="line_diagonal"></div>
                             </div>
                             <div>
