--- a/portfolio_ideta/works_hp.html
+++ b/portfolio_ideta/works_hp.html
@@ -29,45 +29,49 @@
 <body>
     <header>
         <div class="header">
-            <nav class="pc_nav">
-                <li>
-                    <ul class="en"><a href="./index.html">TOP</a></ul>
-                    <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
-                    <ul class="en"><a href="./index.html#contact">CONTACT</a></ul>
-                </li>
-
-                <li>
-                    <ul class="en"><a href="./works_hp.html">HP</a></ul>
-                    <ul class="en"><a href="./works_lp.html">LP</a></ul>
-                    <ul class="en"><a href="./works_bn.html">BANNER</a></ul>
-                    <ul class="en">WORKS</ul>
-                </li>
-            </nav>
-        </div>
-        <div class="sp_btn"><span></span></div>
-        <div class="sp_menu">
-            <div class="sp_portfolioname">
-                <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
-            </div>
-            <div class="content">
-                <nav class="sp_nav">
+            <div class="wrapper">
+                <nav class="pc_nav">
                     <li>
                         <ul class="en"><a href="./index.html">TOP</a></ul>
                         <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
-                        <ul class="en"><a href="./works_hp.html">HP<span>WORKS</span></a></ul>
-                        <ul class="en"><a href="./works_lp.html">LP<span>WORKS</span></a></ul>
-                        <ul class="en"><a href="./works_bn.html">BANNER<span>WORKS</span></a></ul>
-                        <ul class="en"><a href="./index.html#contact">CONTACT</a></ul>
+                        <ul class="en"><a href="./index.html">CONTACT</a></ul>
+                    </li>
+
+                    <li>
+                        <ul class="en"><a href="./works_hp.html">HP</a></ul>
+                        <ul class="en"><a href="./works_lp.html">LP</a></ul>
+                        <ul class="en"><a href="./works_bn.html">BANNER</a></ul>
+                        <ul class="en">WORKS</ul>
                     </li>
                 </nav>
-                <div class="triangle_top"></div>
-                <div class="triangle_bottom"></div>
+            </div>
+            <div class="sp_btn"><span></span></div>
+            <div class="sp_menu">
+                <div>
+                    <div class="menu_portfolioname">
+                        <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
+                    </div>
+                    <div class="content">
+                        <nav class="sp_nav">
+                            <li>
+                                <ul class="en"><a href="./index.html">TOP</a></ul>
+                                <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
+                                <ul class="en"><a href="./works_hp.html">HP<span>WORKS</span></a></ul>
+                                <ul class="en"><a href="./works_lp.html">LP<span>WORKS</span></a></ul>
+                                <ul class="en"><a href="./works_bn.html">BANNER<span>WORKS</span></a></ul>
+                                <ul class="en"><a href="./index.html">CONTACT</a></ul>
+                            </li>
+                        </nav>
+                        <div class="triangle_top"></div>
+                        <div class="triangle_bottom"></div>
 
+                    </div>
+                </div>
             </div>
 
         </div>
     </header>
-    <div class="portfolioname">
+    <div class="top_portfolioname">
         <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
     </div>
     <main data-scroll-container>
