--- a/portfolio_ideta/index.html
+++ b/portfolio_ideta/index.html
@@ -31,11 +31,11 @@
             <div class="wrapper">
                 <nav class="pc_nav">
                     <li>
-                        <ul class="en"><a href="./index.html">TOP</a></ul>
+                        <ul class="en here"><a href="./index.html">TOP</a></ul>
                         <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
                         <ul class="en"><a href="./index.html">CONTACT</a></ul>
                     </li>
-
+                    <div class="line"></div>
                     <li>
                         <ul class="en"><a href="./works_hp.html">HP</a></ul>
                         <ul class="en"><a href="./works_lp.html">LP</a></ul>
@@ -73,6 +73,7 @@
     <div class="top_portfolioname">
         <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
     </div>
+    <div class="bg"></div>
 
     <main data-scroll-container>
         <section data-scroll-section class="scroll_section">
@@ -87,7 +88,7 @@
             </div>
         </section>
 
-        <section data-scroll-section class="scroll_section">
+        <section data-scroll-section class="scroll_section second_section">
             <div class="about">
                 <div class="wrapper">
                     <div class="top_contents">
@@ -251,7 +252,7 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
     <script>
         (() => {
             document.addEventListener('DOMContentLoaded', () => {
-                new LocomotiveScroll({
+                const scroll = new LocomotiveScroll({
                     el: document.querySelector('[data-scroll-container]'),
                     direction: 'horizontal',
                     smooth: true,
@@ -265,18 +266,33 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
                         smooth: true,
 
                     }
+
                 })
+                const bg = document.querySelector('.bg')
+                const secondSection = document.querySelector('.second_section')
+                const secondSectionX = secondSection.getBoundingClientRect().x
+                // console.log(secondSectionX)
+                scroll.on('scroll', function (event) {
+                    const scrollX = event.scroll.x
+                    // console.log(scrollX)
+                    if (scrollX <= secondSectionX) {
+                        const opacity = 1 - (scrollX / secondSectionX)
+                        bg.style.opacity = opacity
+                    }
+                })
+                const secondSectionXStart = secondSection.getBoundingClientRect().x
+
             })
         })()
 
     </script>
+
     <script>
         $(function () {
             $('.sp_btn').on('click', function () {
 
                 // $('.sp_menu').fadeToggle();
-                $('.sp_menu').fadeToggle();
-
+                $('.sp_menu').toggleClass('active')
                 $('.sp_btn').toggleClass('open');
                 $('.header').toggleClass('open');
                 $('.top_portfolioname').toggleClass('open');
