--- a/portfolio_ideta/works_hp_detail.html
+++ b/portfolio_ideta/works_hp_detail.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/works_hp_detail.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <!-- CDN gsap 横から縦スクロール -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
     <script>
         (function (d) {
@@ -36,9 +39,10 @@
                         <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
                         <ul class="en"><a href="./index.html">CONTACT</a></ul>
                     </li>
+                    <div class="line"></div>
 
                     <li>
-                        <ul class="en"><a href="./works_hp.html">HP</a></ul>
+                        <ul class="en here"><a href="./works_hp.html">HP</a></ul>
                         <ul class="en"><a href="./works_lp.html">LP</a></ul>
                         <ul class="en"><a href="./works_bn.html">BANNER</a></ul>
                         <ul class="en">WORKS</ul>
@@ -75,7 +79,7 @@
     <div class="top_portfolioname">
         <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
     </div>
-
+    <div class="bg"></div>
     <main data-scroll-container>
         <section data-scroll-section class="scroll_section">
             <div class="pc_top wrapper">
@@ -94,86 +98,90 @@
             </div>
         </section>
 
-        <section data-scroll-section class="scroll_section">
-            <div class="sp_top">
-                <div class="container">
-                    <div class="page_ttl">
-                        <p class="en">WORKS</p>
-                        <p class="en">HP</p>
-                    </div>
-                    <div class="img">
-                        <div class="img_pc"> <img src="./images/hp_cafe_1.png">
+        <section data-scroll-section class="scroll_section second_section">
+            <div class="sp_container">
+                <div class="inner">
+                    <div class="sp_top">
+                        <div class="container">
+                            <div class="page_ttl">
+                                <p class="en">WORKS</p>
+                                <p class="en">HP</p>
+                            </div>
+                            <div class="img">
+                                <div class="img_pc"> <img src="./images/hp_cafe_1.png">
+                                </div>
+                                <div class="img_sp"> <img src="./images/works_lp_00.png">
+                                </div>
+                            </div>
                         </div>
-                        <div class="img_sp"> <img src="./images/works_lp_00.png">
+                    </div>
+
+                    <div class="contents wrapper">
+                        <div class="sp_ttl">
+                            <h1>カフェサイト（架空）</h1>
+                        </div>
+
+                        <div class="list_left">
+                            <div class="list_row">
+                                <ul>
+                                    <li class="list_ttl">制作期間</li>
+                                    <li class="list_txt">２日</li>
+                                </ul>
+                            </div>
+
+                            <div class="list_row">
+                                <ul>
+                                    <li class="list_ttl">担当範囲</li>
+                                    <li class="list_txt">Webデザイン、コーディング（HTML・CSS）</li>
+                                </ul>
+                            </div>
+
+                            <div class="list_row">
+                                <ul>
+                                    <li class="list_ttl">使用ツール</li>
+                                    <li class="list_txt">Adobe Illustrator・Adobe photoshop</li>
+                                </ul>
+                            </div>
+
+
+                            <div class="list_row">
+                                <ul>
+                                    <li class="list_ttl">ターゲット</li>
+                                    <li class="list_txt">50〜60代の女性</li>
+                                </ul>
+                            </div>
+
+
+                            <div class="list_row">
+                                <ul>
+                                    <li class="list_ttl">コンセプト</li>
+                                    <li class="list_txt">ナチュラル、おしゃれ</li>
+                                </ul>
+                            </div>
+
+                            <div class="list_row">
+                                <ul>
+                                    <li class="list_ttl">目的・課題</li>
+                                    <li class="list_txt">ー</li>
+                                </ul>
+                            </div>
+
+
+                        </div>
+                        <div class="point">
+                            <h2>制作ポイント</h2>
+                            <p>訴求ポイントは「簡単」に作ることができるところ。<br>
+                                「簡単」というだけでは消費者に正しく伝わらないため、具体的に「水・肉・トマト缶だけ」という文言を目立たせ、パッと見ただけでもイメージが湧きやすいように料理画像も併用した。
+                                <br><br>
+                                またターゲット層に合わせて、最低限の文字数とし、視認性に配慮した。
+                            </p>
+                            <p>訴求ポイントは「簡単」に作ることができるところ。<br>
+                                「簡単」というだけでは消費者に正しく伝わらないため、具体的に「水・肉・トマト缶だけ」という文言を目立たせ、パッと見ただけでもイメージが湧きやすいように料理画像も併用した。
+                                <br><br>
+                                またターゲット層に合わせて、最低限の文字数とし、視認性に配慮した。
+                            </p>
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <div class="contents wrapper">
-                <div class="sp_ttl">
-                    <h1>カフェサイト（架空）</h1>
-                </div>
-
-                <div class="list_left">
-                    <div class="list-row">
-                        <ul>
-                            <li class="list_ttl">制作期間</li>
-                            <li class="list_txt">２日</li>
-                        </ul>
-                    </div>
-
-                    <div class="list-row">
-                        <ul>
-                            <li class="list_ttl">担当範囲</li>
-                            <li class="list_txt">Webデザイン、コーディング（HTML・CSS）</li>
-                        </ul>
-                    </div>
-
-                    <div vlass="list-row">
-                        <ul>
-                            <li class="list_ttl">使用ツール</li>
-                            <li class="list_txt">Adobe Illustrator・Adobe photoshop</li>
-                        </ul>
-                    </div>
-
-
-                    <div vlass="list-row">
-                        <ul>
-                            <li class="list_ttl">ターゲット</li>
-                            <li class="list_txt">50〜60代の女性</li>
-                        </ul>
-                    </div>
-
-
-                    <div vlass="list-row">
-                        <ul>
-                            <li class="list_ttl">コンセプト</li>
-                            <li class="list_txt">ナチュラル、おしゃれ</li>
-                        </ul>
-                    </div>
-
-                    <div vlass="list-row">
-                        <ul>
-                            <li class="list_ttl">目的・課題</li>
-                            <li class="list_txt">ー</li>
-                        </ul>
-                    </div>
-
-
-                </div>
-                <div class="point">
-                    <h2>制作ポイント</h2>
-                    <p>訴求ポイントは「簡単」に作ることができるところ。<br>
-                        「簡単」というだけでは消費者に正しく伝わらないため、具体的に「水・肉・トマト缶だけ」という文言を目立たせ、パッと見ただけでもイメージが湧きやすいように料理画像も併用した。
-                        <br><br>
-                        またターゲット層に合わせて、最低限の文字数とし、視認性に配慮した。
-                    </p>
-                    <p>訴求ポイントは「簡単」に作ることができるところ。<br>
-                        「簡単」というだけでは消費者に正しく伝わらないため、具体的に「水・肉・トマト缶だけ」という文言を目立たせ、パッと見ただけでもイメージが湧きやすいように料理画像も併用した。
-                        <br><br>
-                        またターゲット層に合わせて、最低限の文字数とし、視認性に配慮した。
-                    </p>
                 </div>
             </div>
         </section>
@@ -182,13 +190,13 @@
             <div class="all">
                 <div class="allpage">
                     <p class="en">ALL PAGES</p>
-                    <div>
+                    <div class="a">
                         <img src="./images/hp_cafe_2.jpg" alt="">
                     </div>
                     <div>
                         <img src="./images/hp_cafe_3.jpg" alt="">
                     </div>
-                    <div>
+                    <div class="a">
                         <img src="./images/hp_cafe_4.jpg" alt="">
                     </div>
                     <div>
@@ -200,8 +208,9 @@
                     <div>
                         <img src="./images/hp_cafe_7.jpg" alt="">
                     </div>
-                    <p class="en">RESPONSIVE</p>
-
+                    <div class="txt_wrapper">
+                        <p class="en">RESPONSIVE</p>
+                    </div>
                     <div>
                         <img src="./images/hp_cafe_8.jpg" alt="">
                     </div>
@@ -223,6 +232,44 @@
                 </div>
             </div>
         </section>
+
+        <section data-scroll-section class="scroll_section forth_section">
+            <div class="sp_all sliders_wrapper">
+                <!-- <div class="allpage"> -->
+                <p class="en">ALL PAGES</p>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div>
+                    <div>
+                        <div>
+                            <img src="" alt="">
+                        </div>
+                        <div>
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="" alt="">
+                        </div>
+                        <div>
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                </div>
+                <!-- </div> -->
+                <div class="wrapper">
+                    <a href="">
+                        <div class="btn">
+                            <p class="en">CONTACT</p>
+                            <img src="./images/mail.svg">
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 
@@ -232,7 +279,7 @@
     <script>
         (() => {
             document.addEventListener('DOMContentLoaded', () => {
-                new LocomotiveScroll({
+                const scroll = new LocomotiveScroll({
                     el: document.querySelector('[data-scroll-container]'),
                     direction: 'horizontal',
                     smooth: true,
@@ -248,6 +295,22 @@
                     }
 
                 })
+                const bg = document.querySelector('.bg')
+                const secondSection = document.querySelector('.second_section')
+                const secondSectionX = secondSection.getBoundingClientRect().x
+                // console.log(secondSectionX)
+                scroll.on('scroll', function (event) {
+                    const scrollX = event.scroll.x
+                    // console.log(scrollX)
+                    if (scrollX <= secondSectionX) {
+                        const opacity = 1 - (scrollX / secondSectionX)
+                        bg.style.opacity = opacity
+                    }
+                })
+
+
+                const container = document.querySelector()
+
             })
         })()
 
@@ -259,14 +322,22 @@
                 $('.sp_btn').toggleClass('open');
             })
         });
+
+
     </script>
     <script>
         $(function () {
             if (window.matchMedia("(max-width: 768px)").matches) {
+
+
+                $('sp_container').toggleClass('active');
                 $('.contents').toggleClass('wrapper');
+                $('inner').toggleClass('wrapper');
             }
         });
     </script>
+
+
 
 </body>
 
